--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "glass-cannon",
   "type": "module",
+  "private": true,
   "devDependencies": {
     "@eslint/js": "9.21.0",
     "@types/bun": "1.2.4",
