--- a/packages/router/package.json
+++ b/packages/router/package.json
@@ -18,7 +18,7 @@
   },
   "files": ["dist"],
   "dependencies": {
-    "@glass-cannon/server": "^0.0.1"
+    "@glass-cannon/server": "0.0.4"
   },
   "devDependencies": {
     "@types/bun": "latest"
