--- a/packages/server-bun/package.json
+++ b/packages/server-bun/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@glass-cannon/server-bun",
   "type": "module",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "exports": {
     ".": {
       "import": "./dist/index.js",
@@ -10,7 +10,7 @@
   },
   "files": ["dist"],
   "dependencies": {
-    "@glass-cannon/server": "workspace:0.0.4"
+    "@glass-cannon/server": "0.0.5"
   },
   "devDependencies": {
     "@types/bun": "latest"
