--- a/packages/server-bun/package.json
+++ b/packages/server-bun/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@glass-cannon/server-bun",
   "type": "module",
-  "version": "0.0.10",
+  "version": "0.1.0",
   "exports": {
     ".": {
       "import": "./dist/index.js",
@@ -10,7 +10,7 @@
   },
   "files": ["dist"],
   "dependencies": {
-    "@glass-cannon/server": "0.0.10"
+    "@glass-cannon/server": "^0.1.0"
   },
   "devDependencies": {
     "@types/bun": "latest"
