--- a/packages/typebox/package.json
+++ b/packages/typebox/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@glass-cannon/typebox",
   "type": "module",
-  "version": "0.0.17",
+  "version": "0.1.0",
   "exports": {
     ".": {
       "import": "./dist/index.js",
@@ -10,8 +10,8 @@
   },
   "files": ["dist"],
   "dependencies": {
-    "@glass-cannon/router": "0.0.15",
-    "@glass-cannon/server": "0.0.10",
+    "@glass-cannon/router": "^0.1.0",
+    "@glass-cannon/server": "^0.1.0",
     "@sinclair/typebox": "^0.34.33"
   },
   "devDependencies": {
