--- a/packages/cors/package.json
+++ b/packages/cors/package.json
@@ -1,17 +1,19 @@
 {
   "name": "@glass-cannon/cors",
   "type": "module",
-  "version": "0.3.0",
+  "version": "0.5.0",
   "exports": {
     ".": {
       "import": "./dist/index.js",
       "types": "./dist/index.d.ts"
     }
   },
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "dependencies": {
-    "@glass-cannon/router": "^0.3.0",
-    "@glass-cannon/server": "^0.2.0"
+    "@glass-cannon/router": "0.5.0",
+    "@glass-cannon/server": "0.5.0"
   },
   "devDependencies": {
     "@types/bun": "latest"
