--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -6,9 +6,9 @@
     ".": "./dist/index.ts"
   },
   "dependencies": {
-    "@glass-cannon/server-node": "^0.2.0",
-    "@glass-cannon/router": "^0.2.0",
-    "@glass-cannon/typebox": "^0.3.0"
+    "@glass-cannon/server-node": "0.5.0",
+    "@glass-cannon/router": "0.5.0",
+    "@glass-cannon/typebox": "0.5.0"
   },
   "devDependencies": {
     "@types/bun": "latest"
@@ -18,5 +18,6 @@
   },
   "scripts": {
     "dev": "bun run ./src/index.ts"
-  }
+  },
+  "version": "0.5.0"
 }
