--- a/packages/router/package.json
+++ b/packages/router/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@glass-cannon/router",
   "type": "module",
-  "version": "0.3.0",
+  "version": "0.5.0",
   "exports": {
     ".": {
       "import": "./dist/index.js",
@@ -12,9 +12,11 @@
       "types": "./dist/middleware/index.d.ts"
     }
   },
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "dependencies": {
-    "@glass-cannon/server": "^0.2.0"
+    "@glass-cannon/server": "0.5.0"
   },
   "devDependencies": {
     "@types/bun": "latest"
