--- a/packages/server-node/package.json
+++ b/packages/server-node/package.json
@@ -1,16 +1,18 @@
 {
   "name": "@glass-cannon/server-node",
   "type": "module",
-  "version": "0.2.0",
+  "version": "0.5.0",
   "exports": {
     ".": {
       "import": "./dist/index.js",
       "types": "./dist/index.d.ts"
     }
   },
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "dependencies": {
-    "@glass-cannon/server": "^0.2.0"
+    "@glass-cannon/server": "0.5.0"
   },
   "peerDependencies": {
     "typescript": "^5"
