--- a/packages/typebox/package.json
+++ b/packages/typebox/package.json
@@ -1,17 +1,19 @@
 {
   "name": "@glass-cannon/typebox",
   "type": "module",
-  "version": "0.3.0",
+  "version": "0.5.0",
   "exports": {
     ".": {
       "import": "./dist/index.js",
       "types": "./dist/index.d.ts"
     }
   },
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "dependencies": {
-    "@glass-cannon/router": "^0.3.0",
-    "@glass-cannon/server": "^0.2.0",
+    "@glass-cannon/router": "0.5.0",
+    "@glass-cannon/server": "0.5.0",
     "@sinclair/typebox": "^0.34.33",
     "openapi3-ts": "^4.4.0"
   },
