--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@glass-cannon/server-node": "0.8.3",
+     "@glass-cannon/server-bun": "0.8.3",
     "@glass-cannon/router": "0.8.3",
     "@glass-cannon/typebox": "0.8.3"
   },
